--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   web_socket_channel: ^2.1.0
   change_app_package_name: ^1.0.0
   flutter_colorpicker: ^1.0.3
+  accordion: ^2.1.2
 
 dev_dependencies:
   flutter_test:
